--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <img src="assets/img/logo.png" alt="Logo Di Buffala">
+          Carlos Santana<img src="assets/img/logo.png" alt="Logo Di Buffala">
         </a>
       </div>
 
