--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-          Carlos Santana<img src="assets/img/logo.png" alt="Logo Di Buffala">
+          <img src="assets/img/logo.png" alt="Logo Di Buffala">
         </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right navbar__navigation">
-          <li><a href="#">Trabajo</a></li>
+          <li><a href="#">Carlos Santana</a></li>
           <li><a href="#">Características</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contacto</a></li>
